--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -1,7 +1,25 @@
 .lt_body {
   background-color: #222d32;
 }
-
+a:link,
+a:visited,
+a:hover,
+a:active {
+  text-decoration: none;
+}
+.red {
+  color:#e92322;
+}
+.table.table-bordered th,
+.table.table-bordered td {
+  text-align: center;
+  vertical-align: middle;
+}
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 .panel .panel-title {
   height: 40px;
   line-height: 40px;
@@ -10,4 +28,115 @@
 }
 .mt_150 {
   margin-top: 150px;
+}
+.mt_20 {
+  margin-top: 20px;
+}
+
+.lt_aside {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 180px;
+  background-color: #222D32;
+  z-index: 999;
+  transition: all 1s;
+}
+.lt_aside.hidemenu {
+  left: -180px;
+}
+.lt_aside .brand {
+  width: 100%;
+  height: 50px;
+  background-color: #367FA9;
+}
+.lt_aside .brand a {
+  display: block;
+  color: #fff;
+  line-height: 50px;
+  text-align: center;
+  font-size: 20px;
+}
+.lt_aside .user {
+  width: 180px;
+  height: 180px;
+  padding-top: 20px;
+}
+.lt_aside .user img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  display: block;
+  margin: 0 auto;
+}
+.lt_aside .user p {
+  text-align: center;
+  font-size: 18px;
+  color: #fff;
+  line-height: 35px;
+}
+
+.lt_aside .nav li a {
+  width: 180px;
+  height: 40px;
+  line-height: 40px;
+  /* text-align: center; */
+  color: #fff;
+  padding-left: 40px;
+  display: block;
+  border-left: 3px solid transparent;
+}
+.lt_aside .nav li a.current {
+  background-color: #1d1f21;
+  border-left: 3px solid blue;
+}
+.lt_aside .nav li a i {
+  margin-right: 5px;
+}
+.lt_aside .erji {
+  display: none;
+}
+.lt_aside .erji li a {
+  padding-left: 60px;
+}
+
+.lt_main {
+  height: 2000px;
+  padding-left: 180px;
+  padding-top: 50px;
+  transition: all 1s;
+}
+.lt_main.hidemenu {
+  padding-left: 0;
+}
+
+.lt_main .lt_topbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  padding-left: 180px;
+  background-color:#367FA9;
+  transition: all 1s;
+}
+.lt_main .lt_topbar.hidemenu {
+  padding-left: 0px;
+}
+
+.lt_main .icon_left,
+.lt_main .icon_right {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  color: #fff;
+  font-size: 18px;
+}
+
+.echart_left,
+.echart_right {
+  width: 48%;
+  height: 400px;
 }
